--- a/index.html
+++ b/index.html
@@ -842,17 +842,20 @@
           <div class="container-fluid">
             <div class="subheading mb-3">Appointment
             </div>
-            <strong>Northeastern University, Boston, MA, USA</strong>
+            <strong>University of Toronto, Toronto, ON, Canada</strong>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
-                  Assistant Professor | Khoury College of Computer Sciences and Department of Art + Design, College of Arts, Media & Design 
+                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information 
                   <!-- January 2024 - Present -->
                 </li>
-                <!-- <li>
-                  Research Fellow | Khoury College of Computer Sciences | September - December 2023 
-                </li> -->
                 <!-- <li>Visiting Assistant Professor | Khoury College of Computer Sciences | October 2022 - Present
                 </li> -->
+              </ul>
+            <strong>University of Colorado, Boulder, CO, USA</strong>
+              <ul class="mb-0" type="1" style="list-style-type:square">
+                <li>
+                  Assistant Teaching Professor (part-time) | Department of Information Science | Fall 2025 - Spring 2025
+                </li>
               </ul>
 
               <br>
