--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             <strong>University of Toronto, Toronto, ON, Canada</strong>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
-                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information 
+                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information | Fall 2024 - present
                   <!-- January 2024 - Present -->
                 </li>
                 <!-- <li>Visiting Assistant Professor | Khoury College of Computer Sciences | October 2022 - Present
@@ -894,7 +894,7 @@
               <li>
                   Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada | Fall 2024 - present
                   <br>
-                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a>
+                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> (<a href="https://www.dgp.toronto.edu/" target="_blank">Dynamic Graphics Project Lab</a> and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a> (<a href="https://hcds-uoft.ca/" target="_blank">Human-Centered Data Science Lab</a>
               </li> 
               <li>
                 Graduate Research Assistant | University of Colorado Boulder (transferred from Syracuse University) | Advised by <a href="http://dgergle.soc.northwestern.edu" target="_blank">Bryan Semaan</a> | Fall 2019 - Summer 2024
