--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
               <li>
                   Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada | Fall 2024 - present
                   <br>
-                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> (<a href="https://www.dgp.toronto.edu/" target="_blank">Dynamic Graphics Project Lab</a> and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a> (<a href="https://hcds-uoft.ca/" target="_blank">Human-Centered Data Science Lab</a>
+                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> (<a href="https://www.dgp.toronto.edu/" target="_blank">Dynamic Graphics Project Lab</a>) and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a> (<a href="https://hcds-uoft.ca/" target="_blank">Human-Centered Data Science Lab</a>)
               </li> 
               <li>
                 Graduate Research Assistant | University of Colorado Boulder (transferred from Syracuse University) | Advised by <a href="http://dgergle.soc.northwestern.edu" target="_blank">Bryan Semaan</a> | Fall 2019 - Summer 2024
