--- a/index.html
+++ b/index.html
@@ -894,19 +894,19 @@
               <li>
                   Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada | Fall 2024 - present
                   <br>
-                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> (<a href="https://www.dgp.toronto.edu/" target="_blank">Dynamic Graphics Project Lab</a>) and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a> (<a href="https://hcds-uoft.ca/" target="_blank">Human-Centered Data Science Lab</a>)
+                  Worked with <a href="https://www.ishtiaque.net" target="_blank">Syed Ishtiaque Ahmed</a> (<a href="https://www.dgp.toronto.edu/" target="_blank">Dynamic Graphics Project Lab</a>) and <a href="https:/www.shionguha.ca" target="_blank">Shion Guha</a> (<a href="https://hcds-uoft.ca/" target="_blank">Human-Centered Data Science Lab</a>)
               </li> 
               <li>
-                Graduate Research Assistant | University of Colorado Boulder (transferred from Syracuse University) | Advised by <a href="http://dgergle.soc.northwestern.edu" target="_blank">Bryan Semaan</a> | Fall 2019 - Summer 2024
+                Graduate Research Assistant | University of Colorado Boulder (transferred from Syracuse University) | Advised by <a href="https://www.colorado.edu/faculty/semaan/" target="_blank">Bryan Semaan</a> | Fall 2019 - Summer 2024
               </li> 
               <li>
-                Graduate Research Assistant | Syracuse University | Mentored by <a href="https://brenthecht.com/" target="_blank">Carsten Osterlund</a> | Fall 2019 - Summer 2021
+                Graduate Research Assistant | Syracuse University | Mentored by <a href="https://ischool.syracuse.edu/carsten-osterlund/" target="_blank">Carsten Østerlund</a> | Fall 2019 - Summer 2021
               </li>
               <li>
-                Graduate Assistant | Missouri State University | Advised by Anthony J Clark | Spring 2018 - Summer 2019
+                Graduate Assistant | Missouri State University | Advised by <a href="https://cs.pomona.edu/~ajc/" target="_blank">Anthony J Clark</a> | Spring 2018 - Summer 2019
               </li>
               <li>
-                Undergraduate Researcher | Bangladesh University of Engineering and Technology | Advised by <a href="https://sites.google.com/site/tanzimahashem/" target="_blank">Rifat Shahriyar</a> | 2016 - 2017
+                Undergraduate Researcher | Bangladesh University of Engineering and Technology | Advised by <a href="https://rifatshahriyar.github.io/" target="_blank">Rifat Shahriyar</a> and <a href="https://cse.buet.ac.bd/faculty/faculty_detail/anindyaiqbal" target="_blank">Anindya Iqbal</a> | 2016 - 2017
               </li>
             </ul>
 
