reversed ol commit

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               <div class="subheading mb-3">Peer-Reviewed Journal and Conference Papers
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
-              <ul class="mb-0" type="1" style="list-style-type:square">
+              <ol reversed class="mb-0" type="1" style="list-style-type:square">
                   <li>
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
@@ -464,7 +464,7 @@
                         In <em>International Conference on Computing and Big Data (ICCBD)</em>.
                     </p>
                 </li>
-              </ul>
+              </ol>
 
               <!-- <div class="subheading mb-3">Select Peer-reviewed Conference Proceedings Papers
               </div>
