reversed ol commit

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               <div class="subheading mb-3">Peer-Reviewed Journal and Conference Papers
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
-              <ol reversed class="mb-0" type="1" style="list-style-type:square">
+              <ol reversed class="mb-0" style="list-style-type: decimal;">
                   <li>
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
