recent news test commit

--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@
                     </li>
                     
                     <li class="term-item">
+                      <i class="fa-li fas fa-graduation-cap"></i>
+                      <a href="https://x.com/_dipto_das_/status/1801301172663226564" target="_blank">Freshly minted Dr. Dipto Das here &mdash; I've successfully defended my PhD dissertation!</a>
+                  </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-award"></i>
+                      Got Excellence Awards for Teaching and Contributions to Diversity, Equity, and Inclusion from CU Boulder GPSG!
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-award"></i>
+                      Got Award of Excellence for Outstanding Research from CU Boulder INFO!
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-pen-nib"></i>
+                      Papers on <a href="files/papers/CSCW24_minority.pdf" target="_blank">religious minority communities' experiences with fear on social media</a> got accepted at CSCW 2024!
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-regular fa-newspaper"></i>
+                      The Prothom Alo (Bangladesh's most circulated daily) has featured me in an <a href="https://www.prothomalo.com/bangladesh/8ml8jqzguh" target="_blank">article</a>.
+                    </li>
+                    <li class="term-item">
+                      <i class="fa-li fas fa-chalkboard-teacher"></i>
+                      Got a travel grant from CU Boulder GPSG.
+                    </li>                  
+                    <li class="term-item">
                       <i class="fa-li fas fa-pen-nib"></i>
                       Papers on <a href="files/papers/CHI24_audit.pdf" target="_blank">identity bias in NLP tools</a> got accepted at CHI 2024!
                     </li>
