recent news test commit

--- a/index.html
+++ b/index.html
@@ -139,17 +139,22 @@
                     </li>
                     <li class="term-item">
                       <i class="fa-li fas fa-pen-nib"></i>
-                      Papers on <a href="files/papers/ICTD24_civics.pdf" target="_blank">hate speech against Indigenous communities</a> has been accepted to ICTD 2024!
+                      Papers on <a href="files/papers/ICTD24_civics.pdf" target="_blank">a civic-oriented approach to moderating hate speech against Indigenous communities</a> got accepted at ICTD 2024!
                     </li>
                     <li class="term-item">
                       <i class="fa-li fas fa-university"></i>
                       I've started working as a postdoctoral fellow at the University of Toronto!
                     </li>
                     
+                    
+                    <li class="term-item">
+                      <i class="fa-li fas fa-pen-nib"></i>
+                      Papers on <a href="files/papers/CSCW24_transnational.pdf" target="_blank">transnational decolonial discourse related to nationalism on YouTube</a> got accepted at CSCW 2024!
+                    </li>
                     <li class="term-item">
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <a href="https://x.com/_dipto_das_/status/1801301172663226564" target="_blank">Freshly minted Dr. Dipto Das here &mdash; I've successfully defended my PhD dissertation!</a>
-                  </li>
+                    </li>
                     <li class="term-item">
                       <i class="fa-li fas fa-award"></i>
                       Got Excellence Awards for Teaching and Contributions to Diversity, Equity, and Inclusion from CU Boulder GPSG!
