paper list update commit

--- a/index.html
+++ b/index.html
@@ -331,6 +331,13 @@
 
                 <li>
                     <p>
+                        <strong>Dipto Das</strong>, A.K.M. Najmul Islam, S M Taiabul Haque, Jukka Vuorinen, and Syed Ishtiaque Ahmed. 2022. 
+                        <a href="files/papers/ICTD22_microcelebrity.pdf" target="_blank">Understanding the Strategies and Practices of Facebook Microcelebrities for Engaging in Sociopolitical Discourses.</a> 
+                        In <em>Proceedings of International Conference on Information and Communication Technologies and Development (ICTD '22)</em>.
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <strong>Dipto Das</strong> and Bryan Semaan. 2022. 
                         <a href="files/papers/CHI22_collaborative.pdf" target="_blank">Collaborative Identity Decolonization as Reclaiming Narrative Agency: Identity Work of Bengali Communities on Quora.</a> 
                         In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
@@ -350,17 +357,33 @@
 
                 <li>
                     <p>
+                      Abdul Kawsar Tushar, Iffat Jahan Antara, <strong>Dipto Das</strong>, Priyank Chandra, Tanjir Rashid Soron, Md Munirul Haque, Sheikh Iqbal Ahamed, and Syed Ishtiaque Ahmed. 2020. 
+                        <a href="files/papers/ICTD20_stigma.pdf" target="_blank">We Need More Power to Stand Up: Designing to Combat Stigmatization of the Caregivers of Children with Autism in Urban Bangladesh.</a> 
+                        In <em>Proceedings of International Conference on Information and Communication Technologies and Development (ICTD '20')</em>.
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
                         <a href="files/papers/TransAI19_satire.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
                         In <em>IEEE International Conference on Transdisciplinary AI (TransAI)</em>.
                     </p>
+                </li>                
+                <li>
+                    <p>
+                      Sk. Adnan Hassan, <strong>Dipto Das</strong>, Anindya Iqbal, Amiangshu Bosu, Rifat Shahriyar, and Toufique Ahmed. 2018. <a href="files/papers/APSEC18_soqde.pdf" target="_blank">SOQDE: A Supervised Learning Based Question Difficulty Estimation Model for Stack Overflow</a> In <em>Proceedings of IEEE Asia-Pacific Software Engineering Conference (APSEC '18')</em>.
+                    </p>
                 </li>
-
+                <li>
+                    <p>
+                      Hasan Shahid Ferdous, <strong>Dipto Das</strong>, and Farhana Murtaza Choudhury. 2018. <a href="files/papers/OzCHI18_smqa.pdf" target="_blank">Social Media Question Asking (SMQA): Whom Do We Tag and Why?</a> In <em>Proceedings of Australian Conference on Computer-Human Interaction (OzCHI '18')</em>.
+                    </p>
+                </li>
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2018. 
                         <a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">Sarcasm Detection on Flickr Using a CNN.</a> 
-                        In <em>International Conference on Computing and Big Data (ICCBD)</em>.
+                        In <em>Proceedings of International Conference on Computing and Big Data (ICCBD '18')</em>.
                     </p>
                 </li>
               </ol>
