--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
                         <a href="files/papers/JCSCW25_gig.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
-                        In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
+                        To appear In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
                     </p>
                 </li>
 
@@ -267,7 +267,7 @@
                     <p>
                         Divyanshu Kumar Singh, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
                         <a href="files/papers/CHI25_language.pdf" target="_blank">The Power of Language: Resisting Western Heteropatriarchal Normative Writing Standards.</a> 
-                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                        To appear In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '25)</em>.
                     </p>
                 </li>
 
@@ -275,7 +275,7 @@
                     <p>
                         Erina Seh-Young Moon, Devansh Saxena, <strong>Dipto Das</strong>, and Shion Guha. 2025. 
                         <a href="files/papers/CHI25_homelessness.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
-                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                        To appear In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '25)</em>.
                     </p>
                 </li>
 
@@ -283,7 +283,7 @@
                     <p>
                         Ananya Bhattacharjee, Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, S M Taiabul Haque, and Syed Ishtiaque Ahmed. 2025. 
                         <a href="files/papers/CSCW25_migrants.pdf" target="_blank">Residual Mobilities and Religious Practices: Exploring the Experiences of the Hindu Migrants in Canada.</a> 
-                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '25)</em>.
                     </p>
                 </li>
 
@@ -291,7 +291,7 @@
                   <p>
                       Achhiya Sultana*, <strong>Dipto Das</strong>*, Saadia Binte Alam, Mohammad Shidujaman, and Syed Ishtiaque Ahmed. 2024. 
                       <a href="files/papers/ICTD24_civics.pdf" target="_blank">A Civics-Oriented Approach to Understanding Intersectionally Marginalized Users' Experience with Hate Speech Online.</a> 
-                      In <em>International Conference on Information & Communication Technologies and Development (ICTD)</em>. 
+                      In <em>Proceedings of International Conference on Information & Communication Technologies and Development (ICTD '24)</em>. 
                       <em>* Equal contribution, student author is put first.</em>
                   </p>
                 </li>
@@ -300,7 +300,7 @@
                     <p>
                         <strong>Dipto Das</strong>, Dhwani Gandhi, and Bryan Semaan. 2024. 
                         <a href="files/papers/CSCW24_transnational.pdf" target="_blank">Reimagining Communities through Transnational Decolonial Discourse: The Case of Online Video-Mediated Platforms.</a> 
-                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '24)</em>.
                     </p>
                 </li>
 
@@ -308,7 +308,7 @@
                   <p>
                       Mohammad Rashidujjaman Rifat*, <strong>Dipto Das</strong>*, Arpon Podder, Mahiratul Jannat, Robert Soden, Bryan Semaan, and Syed Ishtiaque Ahmed. 2024. 
                       <a href="files/papers/CSCW24_minority.pdf" target="_blank">The Politics of Fear and the Experience of Bangladeshi Religious Minority Communities Using Social Media Platforms.</a> 
-                      In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
+                      In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '24)</em>. 
                       <em>* Equal contribution, student author is put first.</em>
                   </p>
                 </li>
@@ -317,7 +317,7 @@
                     <p>
                         <strong>Dipto Das</strong>, Shion Guha, Jed Brubaker, and Bryan Semaan. 2024. 
                         <a href="files/papers/CHI24_audit.pdf" target="_blank">The "Colonial Impulse" of Natural Language Processing: An Audit of Bengali Sentiment Analysis Tools and Their Identity-based Biases.</a> 
-                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                        In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '24)</em>.
                     </p>
                 </li>
 
@@ -325,7 +325,7 @@
                     <p>
                         <strong>Dipto Das</strong>, Shion Guha, and Bryan Semaan. 2023. 
                         <a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">Toward Cultural Bias Evaluation Datasets: The Case of Bengali Gender, Religious, and National Identity.</a> 
-                        In <em>Workshop on Cross-Cultural Considerations in NLP at the European Chapter of the Association for Computational Linguistics (EACL-C3NLP)</em>.
+                        In <em>Proceedings of Workshop on Cross-Cultural Considerations in NLP at the European Chapter of the Association for Computational Linguistics (EACL-C3NLP '23)</em>.
                     </p>
                 </li>
 
@@ -340,7 +340,7 @@
                     <p>
                         <strong>Dipto Das</strong> and Bryan Semaan. 2022. 
                         <a href="files/papers/CHI22_collaborative.pdf" target="_blank">Collaborative Identity Decolonization as Reclaiming Narrative Agency: Identity Work of Bengali Communities on Quora.</a> 
-                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                        In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '22)</em>.
                     </p>
                 </li>
 
@@ -348,7 +348,7 @@
                     <p>
                         <strong>Dipto Das</strong>, Carsten Østerlund, and Bryan Semaan. 2021. 
                         <a href="files/papers/CSCW21_governance.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
-                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW '21)</em>. 
                         <br>
                         <strong>⭐ Best Paper Honorable Mention</strong> 
                         <strong>❤️ Contribution to Diversity and Inclusion</strong>
@@ -359,31 +359,31 @@
                     <p>
                       Abdul Kawsar Tushar, Iffat Jahan Antara, <strong>Dipto Das</strong>, Priyank Chandra, Tanjir Rashid Soron, Md Munirul Haque, Sheikh Iqbal Ahamed, and Syed Ishtiaque Ahmed. 2020. 
                         <a href="files/papers/ICTD20_stigma.pdf" target="_blank">We Need More Power to Stand Up: Designing to Combat Stigmatization of the Caregivers of Children with Autism in Urban Bangladesh.</a> 
-                        In <em>Proceedings of International Conference on Information and Communication Technologies and Development (ICTD '20')</em>.
+                        In <em>Proceedings of International Conference on Information and Communication Technologies and Development (ICTD '20)</em>.
                     </p>
                 </li>
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
                         <a href="files/papers/TransAI19_satire.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
-                        In <em>IEEE International Conference on Transdisciplinary AI (TransAI)</em>.
+                        In <em>Proceedings of IEEE International Conference on Transdisciplinary AI (TransAI '19)</em>.
                     </p>
                 </li>                
                 <li>
                     <p>
-                      Sk. Adnan Hassan, <strong>Dipto Das</strong>, Anindya Iqbal, Amiangshu Bosu, Rifat Shahriyar, and Toufique Ahmed. 2018. <a href="files/papers/APSEC18_soqde.pdf" target="_blank">SOQDE: A Supervised Learning Based Question Difficulty Estimation Model for Stack Overflow</a> In <em>Proceedings of IEEE Asia-Pacific Software Engineering Conference (APSEC '18')</em>.
+                      Sk. Adnan Hassan, <strong>Dipto Das</strong>, Anindya Iqbal, Amiangshu Bosu, Rifat Shahriyar, and Toufique Ahmed. 2018. <a href="files/papers/APSEC18_soqde.pdf" target="_blank">SOQDE: A Supervised Learning Based Question Difficulty Estimation Model for Stack Overflow</a> In <em>Proceedings of IEEE Asia-Pacific Software Engineering Conference (APSEC '18)</em>.
                     </p>
                 </li>
                 <li>
                     <p>
-                      Hasan Shahid Ferdous, <strong>Dipto Das</strong>, and Farhana Murtaza Choudhury. 2018. <a href="files/papers/OzCHI18_smqa.pdf" target="_blank">Social Media Question Asking (SMQA): Whom Do We Tag and Why?</a> In <em>Proceedings of Australian Conference on Computer-Human Interaction (OzCHI '18')</em>.
+                      Hasan Shahid Ferdous, <strong>Dipto Das</strong>, and Farhana Murtaza Choudhury. 2018. <a href="files/papers/OzCHI18_smqa.pdf" target="_blank">Social Media Question Asking (SMQA): Whom Do We Tag and Why?</a> In <em>Proceedings of Australian Conference on Computer-Human Interaction (OzCHI '18)</em>.
                     </p>
                 </li>
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2018. 
                         <a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">Sarcasm Detection on Flickr Using a CNN.</a> 
-                        In <em>Proceedings of International Conference on Computing and Big Data (ICCBD '18')</em>.
+                        In <em>Proceedings of International Conference on Computing and Big Data (ICCBD '18)</em>.
                     </p>
                 </li>
               </ol>
