paper list update commit

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                       The Prothom Alo (Bangladesh's most circulated daily) has featured me in an <a href="https://www.prothomalo.com/bangladesh/8ml8jqzguh" target="_blank">article</a>.
                     </li>
                     <li class="term-item">
-                      <i class="fa-li fas fa-chalkboard-teacher"></i>
+                      <i class="fa-li fas fa-file-invoice-dollar"></i>
                       Got a travel grant from CU Boulder GPSG.
                     </li>                  
                     <li class="term-item">
