--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Dipto Das</title>
+    <title>Dipto Das, PhD</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
