name title test update commit

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Dipto
-            <span class="text-primary">Das</span>
+            <span class="text-primary">Das</span>, PhD
           </h1>
           <div class="subheading mb-5 aria-hidden="true" title="Researcher, Educator, Engineer">. 
           	<span class="typed" aria-hidden="true"></span>
