pub update commit

--- a/index.html
+++ b/index.html
@@ -368,6 +368,13 @@
                         <a href="files/papers/TransAI19_satire.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
                         In <em>Proceedings of IEEE International Conference on Transdisciplinary AI (TransAI '19)</em>.
                     </p>
+                </li>
+                <li>
+                    <p>
+                        <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
+                        <a href="files/papers/HCC19_sarcasm.pdf" target="_blank">Construct of Sarcasm on social media platform.</a> 
+                        In <em>Proceedings of IEEE international conference on humanized computing and communication (HCC '19)</em>.
+                    </p>
                 </li>                
                 <li>
                     <p>
