--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Dipto Das, PhD</title>
+    <title>Dipto Das</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Dipto
-            <span class="text-primary">Das</span>, PhD
+            <span class="text-primary">Das</span>
           </h1>
           <div class="subheading mb-5 aria-hidden="true" title="Researcher, Educator, Engineer">. 
           	<span class="typed" aria-hidden="true"></span>
