pub update commit

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <p>
                         <strong>Dipto Das</strong>, Shion Guha, Jed Brubaker, and Bryan Semaan. 2024. 
                         <a href="files/papers/CHI24_audit.pdf" target="_blank">The "Colonial Impulse" of Natural Language Processing: An Audit of Bengali Sentiment Analysis Tools and Their Identity-based Biases.</a> 
-                        In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '24)</em>.
+                        In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI~'24)</em>.
                     </p>
                 </li>
 
