--- a/index.html
+++ b/index.html
@@ -495,49 +495,44 @@
               </div>
               <ul class="mb-0" type="1" style="list-style-type:square">
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>. 2021. <a href="files/posters/Boaster_poster_HCIC21.pdf" target="_blank">Designing for Accessible Collaborative Content Creation for People with Vision Impairments.</a> In <em> Human Computer Interaction Consortium (HCIC ’21). </em> [Poster]
-                </p>
-                </li>
-              	<li>
-                  <p>
-                    <strong>Dipto Das</strong>. 2020. <a href="files/posters/BVI_CSCW20_DC.pdf" target="_blank">Designing for Collaborative Content Creation for People with Vision Impairments.</a> In <em> the 2020 Conference Companion Publication on Computer Supported Cooperative Work and Social Computing (CSCW ’20). </em> [Doctoral consortium] <a href="https://dl.acm.org/doi/10.1145/3406865.3418369" target="_blank">[ACM DL link]</a>
-                  </p>
-                </li>
-              	<li>
-                  <p>
-                    <strong>Dipto Das</strong>, Katya Borgos-Rodriguez, and Anne Marie Piper. 2020. <a href="files/posters/BVI_Critrical_Disability_CHI20.pdf" target="_blank">Rethinking Power and Politics in Accessible Making.</a> In <em> the 2020 ACM CHI Workshop on Investigating the Role of Critical Disability Studies in HCI</em>. [Position paper]
-                  </p>
-                </li>
-              	<li>
-                  <p>
-                    <strong>Dipto Das</strong>. 2019. <a href="files/posters/SMA-CSCW19.pdf" target="_blank">Who Can See What: Privacy and Audience Management for People with Vision Impairments on Social Media.</a> In <em> the 2019 ACM CSCW Workshop on Addressing the Accessibility of Social Media </em>, Austin, Texas, USA, November 2019. [Position paper]
-                    <!-- <a href="https://app.box.com/s/fbbvt3lyeolbv1jtoqgdt31gx3km72oe" target="_blank">[pdf]</a> -->
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/CSCW23_DC.pdf">Studying Multi-dimensional Marginalization of Identity from Decolonial and Postcolonial Perspectives.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '23).</em> [Doctoral consortium]
+                    </p>
                 </li>
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>. 2018. <a href="files/posters/BVI_CW_UbiComp18.pdf" target="_blank">Understanding Collaborative Writing Practices of People with Visual Impairments.</a> In <em>Proceedings of the 2018 ACM International Conference on Pervasive and Ubiquitous Computing (UbiComp ’18),</em> pp. 1744-1749. [Short paper & poster]
-                    <a href="https://dl.acm.org/doi/10.1145/3267305.3277807" target="_blank">[ACM DL link]</a>
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>. 2023. <a href="files/posters/GROUP23_DC.pdf">Decolonization through Technology and Decolonization of Technology.</a> In <em>ACM International Conference on Supporting Group Work (GROUP '23).</em> [Doctoral consortium]
+                    </p>
                 </li>
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>. 2018. <a href="files/posters/PPD_GHC18.pdf" target="_blank">Towards Understanding the Effects of Social Networking on Postpartum Depression in Women: An Analysis in the Context of Bangladesh.</a> In <em>Grace Hopper Celebration of Women in Computing,</em> Houston, Texas, USA, September 2018. [Poster]
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>, Arpon Podder, and Bryan Semaan. 2022. <a href="files/posters/COMPASS22_sociomaterial.pdf">A Sociomaterial Perspective on Trace Data Collection: Strategies for Democratizing and Limiting Bias.</a> In <em>ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS '22).</em> [Note]
+                    </p>
                 </li>
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Sharmin Afrose, and Tanzima Hashem. 2015. <a href="files/posters/GP_GHC15.pdf" target="_blank">Protecting Genomic Privacy in Medical Tests using Distributed Storage.</a> In <em>Grace Hopper Celebration of Women in Computing, Houston,</em> Texas, USA, October 2015. [Poster]
-                    <!-- <a href="https://app.box.com/s/bz5f2u63e47jd4u7n6l7fltvn1wy8fbx" target="_blank">[poster]</a> -->
-                  </p>
-                </li>  
+                    <p>
+                        <strong>Dipto Das</strong>, Malay Bhattacharyya, Laura S. Gaytan-Lugo, Ebtisam Alabdulqader, and Nova Ahmed. 2022. <a href="files/posters/COMPASS22_dp.pdf">Importance of Digital Profile Pictures on Social Media Perceived by Different Groups.</a> In <em>ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS '22).</em> [Note]
+                    </p>
+                </li>
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Sunandita Sarker, and Shahina Ferdous. 2014. <a href="files/posters/SpeechAid_GHCI14.pdf" target="_blank">SpeechAid: A Self-treatment System for Individuals with Speech Disorder via Mobile Application.</a> In <em>Grace Hopper Celebration India,</em> India, November, 2014. [Poster] <br>
-                    <!-- <a href="https://drive.google.com/file/d/0B8Xl4uUoGBUiTWptRGtraDRUNHc/" target="_blank">[poster]</a>  -->
-                    <strong>*Best Technical Poster</strong>
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong> and Bryan Semaan. 2020. <a href="files/posters/CSCW20_quoras.pdf">quoras: A Python API for Quora Data Collection to Increase Multi-Language Social Science Research.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '20).</em> [Poster]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <strong>Dipto Das</strong>, Md. Forhad Hossain, and Anthony J. Clark. 2019. <a href="files/posters/TransAI19_sarcasm.pdf">Understanding the Attention Model of Humans in Sarcastic Videos.</a> In <em>IEEE International Conference on Transdisciplinary AI (TransAI '19).</em> [Short paper]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <strong>Dipto Das</strong> and Anthony J. Clark. 2018. <a href="#">Sarcasm Detection on Facebook: A Supervised Learning Approach.</a> In <em>ACM International Conference on Multimodal Interaction (ICMI '18).</em> [Late breaking work]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Anurata Prabha Hridi, <strong>Dipto Das</strong>, Md Monowar Anjum, and Tanmay Das. 2016. <a href="#">Faster Evacuation after Disaster: Finding Alternative Routes Using Probable Human Behavior.</a> In <em>ACM SIGCAS Annual Symposium on Computing for Development (DEV '16).</em> [Poster]
+                    </p>
                 </li>
               </ul>
             </div>
