pub update commit

--- a/index.html
+++ b/index.html
@@ -473,27 +473,19 @@
             </div>
 
             <div class="container-fluid">
-              <div class="subheading mb-3">Magazine Articles
-              </div>
-              <ul class="mb-0" type="1" style="list-style-type:square">
-                <li>
-                  <p>
-                    Kelly Avery Mack, <strong>Dipto Das</strong>, Dhruv Jain, Danielle Bragg, John Tang, Andrew Begel, Erin Beneteau, Josh Urban Davis, Abraham Glasser, Joon Sung Park, and Venkatesh Potluri. 2023. <a href="https://cacm.acm.org/magazines/2023/8/274921-mixed-abilities-and-varied-experiences-a-group-autoethnography-of-a-virtual-summer-internship/fulltext" target="_blank">Mixed Abilities and Varied Experiences: A Group Autoethnography of a Virtual Summer Internship.</a> In <em>Communications of the ACM</em> 66, 8 (August 2023). <a href="https://dl.acm.org/doi/10.1145/3604622" target="_blank">[ACM DL link]</a>
-                  </p>
-                </li>
-                <li>
-                  <p>
-                    Maria Hamdani, Najma Farrukh Hamdani, <strong>Dipto Das</strong>. 2023. <a href="https://sloanreview.mit.edu/article/how-to-help-employees-with-adhd-address-the-challenges-of-remote-work/" target="_blank">How to Enhance Productivity of Your Employees with ADHD in the Virtual Workplace.</a> In <em>MIT Sloan Management Review.</em>
-                  </p>
-                </li>
-              </ul>
-            </div>
-
-
-            <div class="container-fluid">
               <div class="subheading mb-3">Selected Workshop Papers, Posters, and Doctoral Consortia
               </div>
               <ul class="mb-0" type="1" style="list-style-type:square">
+                <li>
+                    <p>
+                        Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2024. <a href="#">Identity Alignment and the Sociotechnical Reconfigurations of Emotional Labor in Transnational Gig-education Platforms.</a> In <em>Quadrennial joint meeting of the European Association for the Study of Science and Technology and the Society for Social Studies of Science (EASST-4S '24).</em> [Position paper]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, Dylan Thomas Doyle, Nusrat Jahan Mim, Zaidat Ibrahim, Sharifa Sultana, C. Estelle Smith, Jed Brubaker, Robert Soden, and Syed Ishtiaque Ahmed. 2024. <a href="#">Religion, faith and spirituality, secularism, disciplinary paradigms.</a> In <em>Northeast HCI Meeting (Northeast HCI '24).</em> [Position paper]
+                    </p>
+                </li>
                 <li>
                     <p>
                         <strong>Dipto Das</strong>. 2023. <a href="files/posters/CSCW23_DC.pdf">Studying Multi-dimensional Marginalization of Identity from Decolonial and Postcolonial Perspectives.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '23).</em> [Doctoral consortium]
@@ -516,6 +508,11 @@
                 </li>
                 <li>
                     <p>
+                        Joshua Introne, <strong>Dipto Das</strong>, Akit Kumar, and Lizhen Liang. 2022. <a href="files/posters/IC2S222_BLF.pdf">Mapping Belief Landscapes in Social Media.</a> In <em>International Conference on Computational Social Science (IC2S2 '22).</em> [Position paper]
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <strong>Dipto Das</strong> and Bryan Semaan. 2020. <a href="files/posters/CSCW20_quoras.pdf">quoras: A Python API for Quora Data Collection to Increase Multi-Language Social Science Research.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '20).</em> [Poster]
                     </p>
                 </li>
@@ -526,12 +523,22 @@
                 </li>
                 <li>
                     <p>
-                        <strong>Dipto Das</strong> and Anthony J. Clark. 2018. <a href="#">Sarcasm Detection on Facebook: A Supervised Learning Approach.</a> In <em>ACM International Conference on Multimodal Interaction (ICMI '18).</em> [Late breaking work]
+                        Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, Najmul Islam, and Syed Ishtiaque Ahmed. 2019. <a href="files/posters/HCIxB19_microcelebrity.pdf">Microcelebrities in Bangladesh.</a> In <em>HCI Across Borders and Intersections Workshop at the ACM CHI Conference on Human Factors in Computing Systems (CHI-HCIxB '19).</em> [Position paper]
                     </p>
                 </li>
                 <li>
                     <p>
-                        Anurata Prabha Hridi, <strong>Dipto Das</strong>, Md Monowar Anjum, and Tanmay Das. 2016. <a href="#">Faster Evacuation after Disaster: Finding Alternative Routes Using Probable Human Behavior.</a> In <em>ACM SIGCAS Annual Symposium on Computing for Development (DEV '16).</em> [Poster]
+                        <strong>Dipto Das</strong> and Anthony J. Clark. 2018. <a href="files/posters/ICMI18_sarcasm.pdf">Sarcasm Detection on Facebook: A Supervised Learning Approach.</a> In <em>ACM International Conference on Multimodal Interaction (ICMI '18).</em> [Late breaking work]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Md Fazlay Rabbi Masum Billah, <strong>Dipto Das</strong>, Imtiaz Karim, Shuha Nabila, and Arnob Paul. 2017. <a href="files/posters/NSysS17_cost.pdf">Cost-Efficient Smart Street Lighting System.</a> In <em>International Conference on Networking, Systems, and Security (NSysS '17).</em> [Poster]
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Anurata Prabha Hridi, <strong>Dipto Das</strong>, Md Monowar Anjum, and Tanmay Das. 2016. <a href="files/posters/DEV16_evacuation.pdf">Faster Evacuation after Disaster: Finding Alternative Routes Using Probable Human Behavior.</a> In <em>ACM SIGCAS Annual Symposium on Computing for Development (DEV '16).</em> [Poster]
                     </p>
                 </li>
               </ul>
