--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
               <div class="subheading mb-3">Peer-Reviewed Journal and Conference Papers
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
-              <ol reversed class="mb-0" style="list-style-type: decimal;">
+              <!-- <ol reversed class="mb-0" style="list-style-type: decimal;"> -->
+              <ul class="mb-0" type="1" style="list-style-type:square">
                   <li>
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
@@ -393,7 +394,7 @@
                         In <em>Proceedings of International Conference on Computing and Big Data (ICCBD '18)</em>.
                     </p>
                 </li>
-              </ol>
+              </ul>
 
               <!-- <div class="subheading mb-3">Select Peer-reviewed Conference Proceedings Papers
               </div>
