--- a/index.html
+++ b/index.html
@@ -888,25 +888,36 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-               Northeastern University, Khoury College of Computer Sciences | Fall 2024 
+                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
+                <br>
+                Assistant Teaching Professor (part-time), <em>INFO 1301 - Statistics for Information Science, INFO 2301 - Quantitative Reasoning</em>
+               </li>
+              <li>
+                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
+                <br>
+                Graduate Part-Time Instructor, <em>INFO 1301 - Statistics for Information Science, INFO 4609 - User-Centered Design</em>
+               </li>
+              <li>
+                University of Colorado Boulder, Department of Information Science | Fall 2021 - Fall 2023 
+                <br>
+                Teaching Assistant in <em>INFO 1111 - Understanding the World Through Data, INFO 1201 - Computational Reasoning, INFO 1301 - Statistics for Information Science</em>
+               </li>
+              <li>
+              <li>
+                Syracuse University, School of Information Studies | Fall 2019 - Spring 2021 
+                <br>
+                Teaching Assistant in <em>IST 343 - Data in Society, IST 421 - Information Visualization, IST 649 - Human Interaction with Computers</em>
+               </li>
+              <li>
+               Missouri State University, Department of Computer Science | Spring 2018 - Spring 2019 
                <br>
-               Instructor, <em>CS 7390 - Special Topics in Human-Centered Computing (Accessible Technology Design) </em>
+               Teaching Assistant in <em>CSC 130 - The World of Computer Science, CSC 131 - Computational Thinking</em>
               </li>
               <li>
-               Northeastern University, Department of Art + Design, CAMD | Spring 2024 
-               <br>
-               Instructor, <em>ARTG 6600 - Experience Design Studio 2 (Section on Design and Accessibility) </em>
-              </li>
-              <li>
-               Northwestern University, Department of Computer Science/ Communication Studies | Winter 2022 
-               <br>
-               Teaching Assistant in <em>COMP_SCI 314/ COMM_ST 351 - Technology and Human Interaction </em>
-              </li>
-              <li>
-                United International University, Dhaka, Bangladesh | October 2015 - March 2017
+                Dhaka International University, Dhaka, Bangladesh | September 2017 - December 2017
                 <br>
                 Lecturer, Department of Computer Science and Engineering
-                <br> Courses taught: <em>Digital Logic Design (theory and lab), Computer Architecture, Electrical Circuits, Assembly Programming Language</em>
+                <br> Courses taught: <em>Compiler Design (theory and lab), Algorithm Design and Analysis (theory and lab), Computer Organization and Architecture</em>
               </li>
             </ul>
 
