--- a/index.html
+++ b/index.html
@@ -903,10 +903,9 @@
                 Teaching Assistant in <em>INFO 1111 - Understanding the World Through Data, INFO 1201 - Computational Reasoning, INFO 1301 - Statistics for Information Science</em>
                </li>
               <li>
-              <li>
                 Syracuse University, School of Information Studies | Fall 2019 - Spring 2021 
                 <br>
-                Teaching Assistant in <em>IST 343 - Data in Society, IST 421 - Information Visualization, IST 649 - Human Interaction with Computers</em>
+                Teaching Assistant in <em>IST 300 - Digital Platforms, IST 343 - Data in Society, IST 421 - Information Visualization, IST 649 - Human Interaction with Computers</em>
                </li>
               <li>
                Missouri State University, Department of Computer Science | Spring 2018 - Spring 2019 
