pub update commit

--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
                 </li>
                 <li>
                     <p>
+                        <strong>Dipto Das</strong> and Bryan Semaan. 2022. <a href="files/posters/CSCW22_scientometric.pdf">Decolonial and Postcolonial Computing Research: A Scientometric Exploration.</a> In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '22).</em> [Poster]
+                    </p>
+                </li>
+                <li>
+                    <p>
                         <strong>Dipto Das</strong>, Arpon Podder, and Bryan Semaan. 2022. <a href="files/posters/COMPASS22_sociomaterial.pdf">A Sociomaterial Perspective on Trace Data Collection: Strategies for Democratizing and Limiting Bias.</a> In <em>ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS '22).</em> [Note]
                     </p>
                 </li>
