awards update commit

--- a/index.html
+++ b/index.html
@@ -811,80 +811,92 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                Google Research Scholar Award ($60,000) | Human-Computer Interaction | 2024
+                Graduate School Travel Grant | University of Colorado Boulder (CU Boulder) | 2024 ($450)
               </li>
               <li>
-                Postdoc Research Award ($10,000) | Paul G. Allen School of Computer Science and Engineering, University of Washington | 2022-23
+                Teaching Excellence Award | Graduate and Professional Student Government (GPSG), CU Boulder | 2024 ($400)
               </li>
               <li>
-                Advanced Rehabilitation Research and Training (ARRT) Postdoctoral Fellowship | UW Center for Research & Education on Accessible Technology & Experiences | Funding: NIDILRR | 2022-23 
+                Diversity, Equity, and Inclusion Excellence Award | GPSG, CU Boulder | 2024 ($400)
               </li>
               <li>
-                Invited article in Communications of the ACM Research Highlights | 2022
+                Award of Excellence for Outstanding Research | Department of Information Science, CU Boulder | 2024
               </li>
               <li>
-                Donald H. and Carolyn E. Ecroyd Fellowship | Dept of Communication Studies, Northwestern University | 2022
+                Special Recognition for Outstanding Reviews | ACM CHI (4 times), ACM CSCW
               </li>
               <li>
-                Rising Star in EECS | Organized by Massachusetts Institute of Technology | 2021
+                GPSG Travel Grant | CU Boulder | 2024 ($500)
               </li>
               <li>
-                Best Paper Award | ACM CSCW 2021
+                Doctoral Research Fund | College of Media, Communication and Information (CMCI), CU Boulder | 2023 ($1,000)
               </li>
               <li>
-                Recognition for Contribution to Diversity & Inclusion (Paper) | ACM CSCW 2021
+                ACM CSCW Doctoral Consortium Travel Support | National Science Foundation (NSF) | 2023
               </li>
               <li>
-                Best Paper Nomination | ACM ASSETS 2021
+                Doctoral Student Attendee Support | Human-Computer Interaction Consortium (HCIC) | 2023 ($600)
               </li>
               <li>
-                PhD Student Research Award | Dept of CS, Northwestern University | 2021
+                Cross-Cultural Context in NLP Registration Scholarship | EACL | 2023 ($200)
+              </li>
+              <li>
+                ACM GROUP Doctoral Consortium Travel Support | NSF | 2023
+              </li>
+              <li>
+                Martin Scholarship | CMCI, CU Boulder | 2022 ($2,500)
+              </li>
+              <li>
+                COMPASS-ICTD Student Travel Grant | ACM and Meta | 2022
+              </li>
+              <li>
+                Doctoral Student Travel Scholarship | CMCI, CU Boulder | 2022-2023 ($1,000)
+              </li>
+              <li>
+                Nomination for Google PhD Fellowship | CU Boulder | 2021
+              </li>
+              <li>
+                Best Paper Honorable Mention Award | ACM CSCW | 2021
+              </li>
+              <li>
+                Recognition for Diversity and Inclusion | ACM CSCW | 2021
+              </li>
+              <li>
+                Graduate Student Fellowship | Department of Information Science, CU Boulder | 2021 ($2,000)
+              </li>
+              <li>
+                Higher Studies Abroad Travel Grant | Bangladesh Sweden Trust Fund | 2021 (30,000 BDT)
+              </li>
+              <li>
+                NSF Grant Writing Workshop Registration Waiver | Syracuse University Graduate School | 2021 ($100)
+              </li>
+              <li>
+                PhD Student Travel Support | School of Information Studies, Syracuse University | 2020 ($1,500)
+              </li>
+              <li>
+                Winter School Attendance Scholarship | New England Complex Systems Institute | 2020
+              </li>
+              <li>
+                Late Breaking Results Travel Grant | ACM International Conference on Multimodal Interaction | 2018 ($500)
+              </li>
+              <li>
+                Winner (Top Three), 3-Minute Thesis Competition | College of Natural and Applied Sciences, Missouri State University | 2018
               </li> 
               <li>
-                Dissertation Research Grant | Northwestern University | 2021 ($1,500)
+                Second Runner-up, Youth Earthquake Preparedness Campaign | UNDP and Bangladesh Government | 2016
               </li>
               <li>
-                Graduate Research Grant | Northwestern University | 2021-22 ($2,999)
-              </li> 
-              <li>
-                Finalist (top 20) | Microsoft Research PhD Fellowship 2020
+                Champion, Business Case Competition | BUET Entrepreneurship Development Club | 2016 (50,000 BDT)
               </li>
               <li>
-                Best Paper Honorable Mention Award | ACM CHI 2020
+                Champion, Humanitarian App Idea Contest | IEEE Bangladesh Section | 2016
               </li>
               <li>
-                Best Paper Honorable Mention Award | ACM CSCW 2019
+                Runner-up, Esonance Technical Poster Presentation | IEEE Islamic University of Technology Branch | 2016
               </li>
               <li>
-                Special Recognition for Outstanding Review | ACM CHI (6 times), ACM CSCW (2 times), ACM DIS
-              </li>
-              <li>
-                Conference Travel Grant | Northwestern University | 2018-2022 (~$6,000)
-              </li>
-              <li>
-                Best Paper Award | IEEE COMPSAC 2018
-              </li>
-              <li>
-                Student Travel Grant | ACM UbiComp 2018 ($600)
-              </li>
-              <li>
-                Student Scholarship | Grace Hopper Celebration 2018
-              </li>
-              <li>
-                Best Undergraduate Thesis Award | Computer Science and Engineering, Bangladesh University of Engineering & Technology | 2015
-              </li>
-              <li>
-                Best Technical Poster | Grace Hopper Celebration India 2014
-              </li>
-              <li>
-                Student Scholarship | Grace Hopper Celebration India 2014
-              </li>
-              <li>
-                Dean’s List Award | Bangladesh University of Engineering & Technology | 2011 - 2015
-              </li>
-              <li>
-                University Merit Scholarship | Bangladesh University of Engineering & Technology | 2011 - 2014
-              </li>
+                Bangladesh National Merit Scholarship | 2013-2017 (Undergraduate tuition fee waiver with stipend, 14,000 BDT)
+              </li>             
             </ul>
 
             <br>
