awards update commit

--- a/index.html
+++ b/index.html
@@ -811,7 +811,10 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                Graduate School Travel Grant | University of Colorado Boulder (CU Boulder) | 2024 ($450)
+                Computing Equipment Grant | University of Colorado Boulder (CU Boulder) | 2024 ($2000)
+              </li>
+              <li>
+                Graduate School Travel Grant | CU Boulder | 2024 ($450)
               </li>
               <li>
                 Teaching Excellence Award | Graduate and Professional Student Government (GPSG), CU Boulder | 2024 ($400)
